# mouse

./: README.md  ReadMe.md  pyproject.toml
Gesture_Base_Mouse/: HandtoMouse.py  hand_to_mouse.py
src/gesture_base_mouse/: hand_to_mouse.py
