[project]
name = "gesture-mouse"
version = "0.1.0"
description = "Control mouse with Mediapipe and Hands."
authors = [
    {name = "bprajas"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mediapipe (>=0.10.35,<0.11.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
